# insights-storage-broker

./: .gitmodules  Dockerfile  Jenkinsfile  README.md  compose.yml  default_map.yaml  pr_check.sh  pyproject.toml  requirements-build.txt  requirements.txt  rhosak_map.yaml  rpms.in.yaml  rpms.lock.yaml  setup.py  ubi.repo
.claude/: settings.local.json
.claude/skills/: regenerate-rpm-lockfile.md
.tekton/: insights-storage-broker-pull-request.yaml  insights-storage-broker-push.yaml  storage-broker-pull-request.yaml  storage-broker-push.yaml  storage-broker-sc-pull-request.yaml  storage-broker-sc-push.yaml
dashboards/: grafana-dashboard-insights-storage-broker-general.configmap.yaml
deploy/: clowd-environment.yml  clowdapp.yml
hermetic/: README.md  rpms.in.yaml  rpms.lock.yaml  ubi.repo
src/storage_broker/: __init__.py  app.py  normalizers.py
src/storage_broker/api/: __init__.py
src/storage_broker/consumer_api/: __init__.py
src/storage_broker/mq/: consume.py  produce.py
src/storage_broker/storage/: aws.py
src/storage_broker/utils/: broker_logging.py  config.py  metrics.py  s3_metrics.py
tests/: test_normalize.py
